fixed image z-index issue, cleanup

--- a/app/styles/_mapcontainer.scss
+++ b/app/styles/_mapcontainer.scss
@@ -202,6 +202,7 @@
 				left: 0;
 				width: 60px;
 				padding: 10px;
+                z-index: 3;
 			}
 		}
 		.topright-container {
@@ -214,6 +215,7 @@
 				right: 0;
 				width: 43px;
 				padding: 10px;
+                z-index: 3;
 			}
 		}
 		.bottomleft-container {
@@ -226,6 +228,7 @@
 				width: 45px;
 				margin-top: 125px;
 				padding: 10px;
+                z-index: 3;
 			}
 		}
 		.bottomright-container {
@@ -239,6 +242,7 @@
 				width: 60px;
 				margin-top: 120px;
 				padding: 10px;
+                z-index: 3;
 			}
 		}
 
